primera version del proyecto

--- a/contacto.html
+++ b/contacto.html
@@ -16,27 +16,28 @@
 </head>
 <body>
     <header class="container-fluid">
-        <div class="row fondo">
-          <ul class="nav justify-content-center p-3 mb-2 letras flex-column flex-md-row">
-              <li class="nav-item letras">
-                  <a class="nav-link letras header_menu" href="quienessomos.html">Quienes Somos</a>
-              </li>
-              <li class="nav-item letras">
-                  <a class="nav-link letras header_menu" href="nuestrosproductos.html">Nuestros Productos</a> 
-              </li>
-              <li class="nav-item letras">
-                  <a class="nav-link letras header_menu" href="#">Contacto</a>
-              </li>
-          </ul>
-          <div class="row col-md-2 top-5 position-absolute text-white text-center fs-5 pt-4 ">
-            <p class="texto">Lucila Gomez Pasteleria</p>
+      <div class="row fondo">
+        <div class="col-md-4">
+          <p class="texto">Lucila Gomez Pasteleria</p>
         </div>
-        <div class="row col-md-2">
-            <a href="https://l.instagram.com/?u=https%3A%2F%2Fapi.whatsapp.com%2Fsend%3Fphone%3D541161539288&e=ATMs9mnyw1sLnNjqaUm3YpBSS4P-5PN3BG9BTin1qnbTIO50ZrHGIHC37Shcc-QZxHu0Ff6Elgex4-5CjiMKhOlwf84NuzIp&s=1" target="_blank" class="texto2">Para consultas y reservas</a>
-        </div>
+        <div class="col-md-4">
+          <ul class="nav justify-content-center p-3 mb-2 flex-column flex-md-row">
+            <li class="nav-item">
+                <a class="nav-link header_menu" aria-current="page" href="quienessomos.html">Quienes Somos</a>
+            </li>
+            <li class="nav-item">
+                <a class="nav-link header_menu" href="nuestrosproductos.html">Nuestros Productos</a>
+            </li>
+            <li class="nav-item">
+                <a class="nav-link header_menu" href="contacto.html">Contacto</a>
+            </li>
+      </ul>
       </div>
-      <h1 class="row-col-md-12 text-center text-white pt-1">Contacto</h1>
-    </header>   
+      <div class="col-md-4">
+        <a href="https://l.instagram.com/?u=https%3A%2F%2Fapi.whatsapp.com%2Fsend%3Fphone%3D541161539288&e=ATMs9mnyw1sLnNjqaUm3YpBSS4P-5PN3BG9BTin1qnbTIO50ZrHGIHC37Shcc-QZxHu0Ff6Elgex4-5CjiMKhOlwf84NuzIp&s=1" target="_blank" class="texto2">Para consultas y reservas</a>
+      </div>
+  </div>
+  </header>   
     <main class="container">
       <section>
         <div class="row justify-content-center p-5 flex-column flex-md-row">
@@ -75,10 +76,10 @@
               <a href="#"><i class="fas fa-paper-plane icon7"></i></a>
           </button>
         </div>
-        <div class="row col-md-12 justify-content-center botonesBackHomeContacto mediaHome">
-        <a href="index.html" button type="button" class="btn btn-primary btn-sm botonesBackHome text-center" onclick="this.blur();">Volver al home</a>
-      </div>
-      <div class="row justify-content-center">
+        <div class="row col-md-12 justify-content-center">
+          <a href="index.html" button type="button" class="btn btn-primary btn-sm text-center botonQs" style="top: 85%; position: absolute;" onclick="this.blur();">Volver al home</a>
+        </div>
+        <div class="row justify-content-center">
         <button type="button" class="btn btn-primary col-md-1 botonDePedido" data-bs-toggle="modal" data-bs-target="#exampleModal">
           Cancelar Pedido
         </button>
@@ -102,21 +103,17 @@
     </section>
     </main>
     <footer class="container-fluid pie"> 
-      <div class="container">
-        <div class="row">
-          <div class="col-md-3 fs-2 text-center p-3"><aside class="lugar">Quilmes-Buenos Aires</aside></div>
-          <div class="col-md-3 fs-2 text-end p-3">
-              <a href="https://www.instagram.com/lucilagomezpasteleria/?hl=es-la" target="_blank"><i class="fab fa-instagram icon1"></i></a>
-              <a href="https://l.instagram.com/?u=https%3A%2F%2Fapi.whatsapp.com%2Fsend%3Fphone%3D541161539288&e=ATMs9mnyw1sLnNjqaUm3YpBSS4P-5PN3BG9BTin1qnbTIO50ZrHGIHC37Shcc-QZxHu0Ff6Elgex4-5CjiMKhOlwf84NuzIp&s=1" target="_blank"><i class="fab fa-whatsapp icon2"></i></a>
-          </div>
-              <div class="col-md-2">
-                  <p class="footer-s">Seguinos</p>
+      <div class="row fondo"> 
+        <div class="col-md-3 fs-2 text-center p-3"><aside class="lugar">Quilmes-Buenos Aires</aside></div>
+              <div class="col-md-2 fs-2 p-1" style="left: 23%; position: relative;">
+                  <a href="https://www.instagram.com/lucilagomezpasteleria/?hl=es-la" target="_blank"><i class="fab fa-instagram icon1"></i></a>
+                  <a href="https://l.instagram.com/?u=https%3A%2F%2Fapi.whatsapp.com%2Fsend%3Fphone%3D541161539288&e=ATMs9mnyw1sLnNjqaUm3YpBSS4P-5PN3BG9BTin1qnbTIO50ZrHGIHC37Shcc-QZxHu0Ff6Elgex4-5CjiMKhOlwf84NuzIp&s=1" target="_blank"><i class="fab fa-whatsapp icon2"></i></a>
               </div>
-              <div class="col-md-2">
-                  <p class="footer-c">©Adriel Alegre</p>
-              </div>
-      </div>
-      </div>
+                <div class="col-md-3 text-center p-4"><aside class="footer-c">©AdrielAlegre</aside></div>
+        </div>
+        <div class="row fondo">
+          <div class="col-md-12 text-center" style="font-family:'Barlow Condensed', sans-serif; color: #6c757d;"><p>Seguinos</p></div>
+        </div>
     </footer>
       <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.3/dist/umd/popper.min.js" integrity="sha384-eMNCOe7tC1doHpGoWe/6oMVemdAVTMs2xqW4mwXrXsW0L84Iytr2wi5v2QjrP/xp" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-U1DAWAznBHeqEIlVSCgzq+c9gqGAJn5c/t99JyeKa9xxaYpSvHU5awsuZVVFIhvj" crossorigin="anonymous"></script>
