--- a/ejemplogit.html
+++ b/ejemplogit.html
@@ -3,7 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <title>Prueba</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Ejemplogit</title>
 </head>
 <body>
     
