--- a/index.html
+++ b/index.html
@@ -3,8 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <!--<meta name="viewport" content="width=device-width, initial-scale=1.0">-->
-    <meta name="viewport" content="width=device-width, user-scalable=no, initial-scale=1.0, maximun-scale=1.0, minimun-scale=1.0">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-KyZXEAg3QhqLMpG8r+8fhAXLRk2vvoC2f3B09zVXn8CA5QIVfZOJ3BCsw2P0p/We" crossorigin="anonymous">
     <script src="https://kit.fontawesome.com/bbd248f1d8.js" crossorigin="anonymous"></script>
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -18,9 +17,13 @@
 <body>
     <header class="container-fluid">
       <div class="row fondo">
-        <ul class="nav justify-content-center p-3 mb-2 media"> 
+        <div class="col-md-4">
+          <p class="texto">Lucila Gomez Pasteleria</p>
+        </div>
+        <div class="col-md-4">
+          <ul class="nav justify-content-center p-3 mb-2 flex-column flex-md-row">
             <li class="nav-item">
-                <a class="nav-link header_menu" aria-current="page" href="quienessomos.html" >Quienes Somos</a>
+                <a class="nav-link header_menu" aria-current="page" href="quienessomos.html">Quienes Somos</a>
             </li>
             <li class="nav-item">
                 <a class="nav-link header_menu" href="nuestrosproductos.html">Nuestros Productos</a>
@@ -29,78 +32,115 @@
                 <a class="nav-link header_menu" href="contacto.html">Contacto</a>
             </li>
         </ul>
-        <div class="row col-md-2 top-5 position-absolute text-white text-center fs-5 pt-4 ">
-            <p class="texto">Lucila Gomez Pasteleria</p>
         </div>
-        <div class="row col-md-2">
-            <a href="https://l.instagram.com/?u=https%3A%2F%2Fapi.whatsapp.com%2Fsend%3Fphone%3D541161539288&e=ATMs9mnyw1sLnNjqaUm3YpBSS4P-5PN3BG9BTin1qnbTIO50ZrHGIHC37Shcc-QZxHu0Ff6Elgex4-5CjiMKhOlwf84NuzIp&s=1" target="_blank" class="texto2">Para consultas y reservas</a>
+        <div class="col-md-4">
+          <a href="https://l.instagram.com/?u=https%3A%2F%2Fapi.whatsapp.com%2Fsend%3Fphone%3D541161539288&e=ATMs9mnyw1sLnNjqaUm3YpBSS4P-5PN3BG9BTin1qnbTIO50ZrHGIHC37Shcc-QZxHu0Ff6Elgex4-5CjiMKhOlwf84NuzIp&s=1" target="_blank" class="texto2">Para consultas y reservas</a>
         </div>
     </div>
     </header>
       <main class="container-fluid">
-        <div id="carouselExampleCaptions" class="carousel slide col-md-12" data-bs-ride="carousel">
-            <div class="carousel-inner">
-              <div class="carousel-item active">
-                <img src="imagenes/logodeboost.jpg" class="d-block w-20 mx-auto p-5 opacity-75">
-                <div class="carousel-caption d-none d-md-block text-dark">
-                </div>
+        <div class="row">
+          <div class="col-md-12 text-center pt-5">
+              <img src="../proyectobootstrap/imagenes/IMG_4003 orginal.png" class="img-responsive" width="25%">
+          </div>
+          <div class="row">
+            <div class="col-md-12 text-center pt-5 fs-5" style="font-family: 'Allison', cursive;">
+              <p>Realiza tus pedidos a traves de whatsapp y disfruta el pedido en tu casa</p>
+            </div>
+          </div>
+          <div class="container-fluid">
+            <div class="row text-center pt-5 pb-5">
+              <div class="col-md-2 imagenes-index"><img src="imagenes/IMG_4124-2.jpg" class="img-responsive" width="70%">
+                <h4>Tortas</h4>
               </div>
-              <div class="carousel-item">
-                <img src="imagenes/IMG_4124-2.jpg" class="d-block w-20 mx-auto p-5">
-                <div class="carousel-caption d-none d-md-block">
-                </div>
+              <div class="col-md-2 imagenes-index"><img src="imagenes/IMG_4126-2.jpg" class="img-responsive" width="70%">
+                <h4>Cumpleaños</h4>
               </div>
-              <div class="carousel-item">
-                <img src="imagenes/IMG_4126-2.jpg" class="d-block w-20 mx-auto p-5">
-                <div class="carousel-caption d-none d-md-block">
-                </div>
+              <div class="col-md-2 imagenes-index"><img src="imagenes/IMG_4128-2.jpg" class="img-responsive" width="70%">
+                <h4>Paletas</h4>
               </div>
-              <div class="carousel-item">
-                <img src="imagenes/IMG_4127-2.jpg" class="d-block w-20 mx-auto p-5">
-                <div class="carousel-caption d-none d-md-block">
-                </div>
+              <div class="col-md-2 imagenes-index"><img src="imagenes/IMG_4129-2.jpg" class="img-responsive" width="70%">
+                <h4>Macarons</h4>
               </div>
-              <div class="carousel-item">
-                <img src="imagenes/IMG_4132-2.jpg" class="d-block w-20 mx-auto p-5">
-                <div class="carousel-caption d-none d-md-block">
-                </div>
+              <div class="col-md-2 imagenes-index"><img src="imagenes/IMG_4130-2.jpg" class="img-responsive" width="70%">
+                <h4>Alfajores</h4>
               </div>
-              <div class="carousel-item">
-                <img src="imagenes/IMG_4130-2.jpg" class="d-block w-20 mx-auto p-5">
-                <div class="carousel-caption d-none d-md-block">
-                </div>
-              </div>
-              <div class="carousel-item">
-                <img src="imagenes/IMG_4131-2.jpg" class="d-block w-20 mx-auto p-5">
-                <div class="carousel-caption d-none d-md-block">
-                </div>
+              <div class="col-md-2 imagenes-index"><img src="imagenes/IMG_4131-2.jpg" class="img-responsive" width="70%">
+                <h4>Brownie</h4>
               </div>
             </div>
-            <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide="prev">
-              <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-              <span class="visually-hidden">Previous</span>
-            </button>
-            <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide="next">
-              <span class="carousel-control-next-icon" aria-hidden="true"></span>
-              <span class="visually-hidden">Next</span>
-            </button>
           </div>
+            <div class="container-fluid">
+              <div class="row col-md-12 text-center">
+                <p>Recorda que podes abonar tus productos con estos medios de pago</p>
+              </div>
+            </div>
+            <div class="container-fluid">
+              <div class="row">
+                <div class="col-md-6 text-end"><img src="imagenes/logomercadopago.png" class="img-responsive" width="15%"></div>
+                <div class="col-md-6"><img src="imagenes/logovisa (1).png" class="img-responsive" width="65px"></div>
+              </div>
+            </div>
+            <!--<div id="carouselExampleCaptions" class="carousel slide" data-bs-ride="carousel">
+              <div class="carousel-inner imagenesrs">
+                <div class="carousel-item active">
+                  <img src="imagenes/logodeboost.jpg" class="d-block w-100">
+                </div>
+                <div class="carousel-item">
+                  <img src="imagenes/IMG_4124-2.jpg" class="d-block w-100">
+                  <div class="carousel-caption d-none d-md-block">
+                  </div>
+                </div>
+                <div class="carousel-item">
+                  <img src="imagenes/IMG_4126-2.jpg" class="d-block w-100">
+                  <div class="carousel-caption d-none d-md-block">
+                  </div>
+                </div>
+                <div class="carousel-item">
+                  <img src="imagenes/IMG_4127-2.jpg" class="d-block w-100">
+                  <div class="carousel-caption d-none d-md-block">
+                  </div>
+                </div>
+                <div class="carousel-item">
+                  <img src="imagenes/IMG_4132-2.jpg" class="d-block w-100">
+                  <div class="carousel-caption d-none d-md-block">
+                  </div>
+                </div>
+                <div class="carousel-item">
+                  <img src="imagenes/IMG_4130-2.jpg" class="d-block w-100">
+                  <div class="carousel-caption d-none d-md-block">
+                  </div>
+                </div>
+                <div class="carousel-item">
+                  <img src="imagenes/IMG_4131-2.jpg" class="d-block w-100">
+                  <div class="carousel-caption d-none d-md-block">
+                  </div>
+                </div>
+              </div>
+              <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide="prev">
+                <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                <span class="visually-hidden">Previous</span>
+              </button>
+              <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide="next">
+                <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                <span class="visually-hidden">Next</span>
+              </button>
+            </div>-->
+        
+        </div>
         </main>
         <footer class="container-fluid"> 
           <div class="row fondo"> 
             <div class="col-md-3 fs-2 text-center p-3"><aside class="lugar">Quilmes-Buenos Aires</aside></div>
-                  <div class="col-md-3 fs-2 text-end p-3">
+                  <div class="col-md-2 fs-2 p-1" style="left: 23%; position: relative;">
                       <a href="https://www.instagram.com/lucilagomezpasteleria/?hl=es-la" target="_blank"><i class="fab fa-instagram icon1"></i></a>
                       <a href="https://l.instagram.com/?u=https%3A%2F%2Fapi.whatsapp.com%2Fsend%3Fphone%3D541161539288&e=ATMs9mnyw1sLnNjqaUm3YpBSS4P-5PN3BG9BTin1qnbTIO50ZrHGIHC37Shcc-QZxHu0Ff6Elgex4-5CjiMKhOlwf84NuzIp&s=1" target="_blank"><i class="fab fa-whatsapp icon2"></i></a>
                   </div>
-                    <div class="col-md-2">
-                    <p class="footer-s">Seguinos</p>
-                    </div>
-                    <div class="col-md-2">
-                    <p class="footer-c">©Adriel Alegre<p>
-                    </div>
-          </div>
-        
+                    <div class="col-md-3 text-center p-4"><aside class="footer-c">©AdrielAlegre</aside></div>
+            </div>
+            <div class="row fondo">
+              <div class="col-md-12 text-center" style="font-family:'Barlow Condensed', sans-serif; color: #6c757d;"><p>Seguinos</p></div>
+            </div>
         </footer>
       <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.3/dist/umd/popper.min.js" integrity="sha384-eMNCOe7tC1doHpGoWe/6oMVemdAVTMs2xqW4mwXrXsW0L84Iytr2wi5v2QjrP/xp" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-U1DAWAznBHeqEIlVSCgzq+c9gqGAJn5c/t99JyeKa9xxaYpSvHU5awsuZVVFIhvj" crossorigin="anonymous"></script>
