--- a/nuestrosproductos.html
+++ b/nuestrosproductos.html
@@ -14,29 +14,65 @@
 <body>
     <header class="container-fluid">
         <div class="row fondo">
-            <ul class="nav justify-content-center p-3 mb-2 letras"> 
-                <li class="nav-item letras">
-                    <a class="nav-link active letras header_menu" aria-current="page" href="quienessomos.html" >Quienes Somos</a>
-                </li>
-                <li class="nav-item letras">
-                    <a class="nav-link letras header_menu" href="#">Nuestros Productos</a>
-                </li>
-                <li class="nav-item letras">
-                    <a class="nav-link letras header_menu" href="contacto.html">Contacto</a>
-                </li>
-            </ul>
-            <div class="row col-md-2 top-5 position-absolute text-white text-center fs-5 pt-4 ">
-                <p class="texto">Lucila Gomez Pasteleria</p>
-            </div>
-            <div class="row col-md-2">
-                <a href="https://l.instagram.com/?u=https%3A%2F%2Fapi.whatsapp.com%2Fsend%3Fphone%3D541161539288&e=ATMs9mnyw1sLnNjqaUm3YpBSS4P-5PN3BG9BTin1qnbTIO50ZrHGIHC37Shcc-QZxHu0Ff6Elgex4-5CjiMKhOlwf84NuzIp&s=1" target="_blank" class="texto2">Para consultas y reservas</a>
+          <div class="col-md-4">
+            <p class="texto">Lucila Gomez Pasteleria</p>
+          </div>
+          <div class="col-md-4">
+            <ul class="nav justify-content-center p-3 mb-2 flex-column flex-md-row">
+              <li class="nav-item">
+                  <a class="nav-link header_menu" aria-current="page" href="quienessomos.html">Quienes Somos</a>
+              </li>
+              <li class="nav-item">
+                  <a class="nav-link header_menu" href="nuestrosproductos.html">Nuestros Productos</a>
+              </li>
+              <li class="nav-item">
+                  <a class="nav-link header_menu" href="contacto.html">Contacto</a>
+              </li>
+          </ul>
+          </div>
+          <div class="col-md-4">
+            <a href="https://l.instagram.com/?u=https%3A%2F%2Fapi.whatsapp.com%2Fsend%3Fphone%3D541161539288&e=ATMs9mnyw1sLnNjqaUm3YpBSS4P-5PN3BG9BTin1qnbTIO50ZrHGIHC37Shcc-QZxHu0Ff6Elgex4-5CjiMKhOlwf84NuzIp&s=1" target="_blank" class="texto2">Para consultas y reservas</a>
+          </div>
+      </div>
+      </header>   
+    <main class="container-fluid">
+        <div class="row m-5">
+            <h2>Categorías</h2>
+        </div>
+        <div class="row">
+            <div class="col-md-12 text-center">
+                <h3>Cupcakes</h3>
             </div>
         </div>
-        <h1 class="row-col-md-12 text-center text-white pt-1">Nuestros Productos</h1>
-    </header>   
-    <main>
-        <section class="container-fluid"> 
-                <div class="row pt-5">
+        <section class="container-fluid">
+            <div class="row m-4">
+                <div class="card col-md-3" style="width: 200px; height: 200px; font-family: lato,Arial,Helvetica,sans-serif; text-transform: uppercase; font-size: 10px;">
+                    <ul class="list-group list-group-flush pt-3 m-1 categorias-np">
+                      <li class="list-group-item"><a href=""></a>Cupcakes</li>
+                      <li class="list-group-item"><a href="tortas.html">Tortas</a></li>
+                      <li class="list-group-item"><a href="tortabrownie.html">Torta Brownie</a></li>
+                      <li class="list-group-item"><a href="chessecake.html">Chessecake</a></li>
+                      <li class="list-group-item"><a href="tortastematicas.html">Tortas Tematicas</a></li>
+                    </ul>
+                </div>
+                <div class="row col-md-3">
+                    <div style="left: 30%; position: absolute;"><img src="imagenes/cupcakes/cup1_4195.jpg" class="img-responsive"; width="325px"></div>
+                </div>
+                <div class="row col-md-3">
+                    <div style="left: 50%; position: absolute;"><img src="imagenes/cupcakes/cup2_4196.jpg" class="img-responsive"; width="325px"></div>
+                </div>
+                <div class="row col-md-3">
+                    <div style="left: 70%; position: absolute;"><img src="imagenes/cupcakes/cup5_4200.jpg" class="img-responsive"; width="325px"></div>
+                </div>
+            </div>
+            <div class="row col-md-3 pt-3">
+                <div style="left: 30%; position: absolute;"><img src="imagenes/cupcakes/cup6_4201.jpg" class="img-responsive"; width="325px"></div>
+                <div class="col-md-3"style="left: 50%; position: absolute;"><img src="imagenes/cupcakes/cup4_4199.jpg" class="img-responsive"; width="325px"></div>
+                <div class="col-md-3"style="left: 70%; position: absolute;"><img src="imagenes/cupcakes/cup3_4197.jpg" class="img-responsive"; width="325px"></div>
+            </div>
+        </section>
+        
+                <!--<div class="row pt-5">
                     <div class="col-md-4 text-center efecto"><img src="imagenes/alfajores.jpg" class = "img-responsive" width = "75%"></div>
                     <div class="col-md-4 text-center efecto"><img src="imagenes/chessecake.jpg" class = "img-responsive" width = "75%"></div>
                     <div class="col-md-4 text-center efecto"><img src="imagenes/chocotorta.jpg" class = "img-responsive" width = "75%"></div>
@@ -75,23 +111,19 @@
             </section>
             <div class="row col-md-12 justify-content-center">
                 <a href="index.html" button type="button" class="btn btn-primary btn-sm botonesBackHome text-center" onclick="this.blur();">Volver al home</a></div>   
-            </div>
+            </div>-->
     </main>
-    <footer class="container-fluid pie2"> 
-        <div class="container">
-            <div class="row">
-                <div class="col-md-3 fs-2 text-center p-3"><aside class="lugar">Quilmes-Buenos Aires</aside></div>
-                <div class="col-md-3 fs-2 text-end p-3">
+    <footer class="container-fluid pie"> 
+        <div class="row fondo"> 
+            <div class="col-md-3 fs-2 text-center p-3"><aside class="lugar">Quilmes-Buenos Aires</aside></div>
+                <div class="col-md-2 fs-2 p-1" style="left: 23%; position: relative;">
                     <a href="https://www.instagram.com/lucilagomezpasteleria/?hl=es-la" target="_blank"><i class="fab fa-instagram icon1"></i></a>
                     <a href="https://l.instagram.com/?u=https%3A%2F%2Fapi.whatsapp.com%2Fsend%3Fphone%3D541161539288&e=ATMs9mnyw1sLnNjqaUm3YpBSS4P-5PN3BG9BTin1qnbTIO50ZrHGIHC37Shcc-QZxHu0Ff6Elgex4-5CjiMKhOlwf84NuzIp&s=1" target="_blank"><i class="fab fa-whatsapp icon2"></i></a>
                 </div>
-                    <div class="col-md-2">
-                        <p class="footer-s">Seguinos</p>
-                    </div>
-                    <div class="col-md-2">
-                        <p class="footer-c">©Adriel Alegre</p>
-                    </div>
+                <div class="col-md-3 text-center p-4"><aside class="footer-c">©AdrielAlegre</aside></div>
             </div>
+            <div class="row fondo">
+            <div class="col-md-12 text-center" style="font-family:'Barlow Condensed', sans-serif; color: #6c757d;"><p>Seguinos</p></div>
         </div>
     </footer>
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.3/dist/umd/popper.min.js" integrity="sha384-eMNCOe7tC1doHpGoWe/6oMVemdAVTMs2xqW4mwXrXsW0L84Iytr2wi5v2QjrP/xp" crossorigin="anonymous"></script>
