--- a/quienessomos.html
+++ b/quienessomos.html
@@ -14,25 +14,27 @@
 <body>
     <header class="container-fluid">
         <div class="row fondo">
-            <ul class="nav justify-content-center p-3 mb-2 letras">
-                <li class="nav-item letras">
-                    <a class="nav-link active letras header_menu" aria-current="page" href="#" >Quienes Somos</a> 
-                </li>
-                <li class="nav-item letras">
-                    <a class="nav-link letras letras header_menu" aria-current="page" href="nuestrosproductos.html">Nuestros Productos</a> 
-                <li class="nav-item letras">
-                    <a class="nav-link letras letras header_menu" aria-current="page" href="contacto.html">Contacto</a> 
-                </li>
-            </ul>
-            <div class="row col-md-2 top-5 position-absolute text-white text-center fs-5 pt-4 ">
-                <p class="texto">Lucila Gomez Pasteleria</p>
-            </div>
-            <div class="row col-md-2">
-                <a href="https://l.instagram.com/?u=https%3A%2F%2Fapi.whatsapp.com%2Fsend%3Fphone%3D541161539288&e=ATMs9mnyw1sLnNjqaUm3YpBSS4P-5PN3BG9BTin1qnbTIO50ZrHGIHC37Shcc-QZxHu0Ff6Elgex4-5CjiMKhOlwf84NuzIp&s=1" target="_blank" class="texto2">Para consultas y reservas</a>
-            </div>
-        </div>
-        <h1 class="row-col-md-12 text-center text-white pt-1">Quienes Somos</h1>
-    </header>
+          <div class="col-md-4">
+            <p class="texto">Lucila Gomez Pasteleria</p>
+          </div>
+          <div class="col-md-4">
+            <ul class="nav justify-content-center p-3 mb-2 flex-column flex-md-row">
+              <li class="nav-item">
+                  <a class="nav-link header_menu" aria-current="page" href="quienessomos.html">Quienes Somos</a>
+              </li>
+              <li class="nav-item">
+                  <a class="nav-link header_menu" href="nuestrosproductos.html">Nuestros Productos</a>
+              </li>
+              <li class="nav-item">
+                  <a class="nav-link header_menu" href="contacto.html">Contacto</a>
+              </li>
+          </ul>
+          </div>
+          <div class="col-md-4">
+            <a href="https://l.instagram.com/?u=https%3A%2F%2Fapi.whatsapp.com%2Fsend%3Fphone%3D541161539288&e=ATMs9mnyw1sLnNjqaUm3YpBSS4P-5PN3BG9BTin1qnbTIO50ZrHGIHC37Shcc-QZxHu0Ff6Elgex4-5CjiMKhOlwf84NuzIp&s=1" target="_blank" class="texto2">Para consultas y reservas</a>
+          </div>
+      </div>
+      </header>
     <main>
         <section class="row">
             <article class="col-md-5 text-center pt-4"><img src="imagenes/keepcalm.jpg" class = "img-responsive" width = "55%"></article>
@@ -40,9 +42,10 @@
                 Lucila(como indica nuestro nombre) es la que hace posible cada producto,la misma es quien realiza la elaboracion y presentacion final.
                 Cabe aclarar que realizamos un contacto previo con nuestros clientes para saber que es lo que desean ,asi poder trabajar para satisfacer al mismo y que tengan una buena experiencia</p> 
             <div class="row col-md-12 justify-content-center">
-                <a href="index.html" button type="button" class="btn btn-primary btn-sm botonesBackHome text-center" onclick="this.blur();">Volver al home</a></div>
-            </section>
-            <section>
+                <a href="index.html" button type="button" class="btn btn-primary btn-sm botonQs text-center" onclick="this.blur();">Volver al home</a>
+            </div>
+        </section>
+        <section>
                 <svg class="illustracion" width="810" height="678" viewBox="0 0 810 678" fill="none" xmlns="http://www.w3.org/2000/svg">
                     <g id="undraw_cookie_love_ulvn 1" filter="url(#filter0_d)">
                     <path id="Vector" d="M550 186.079C556.075 186.079 561 181.154 561 175.079C561 169.004 556.075 164.079 550 164.079C543.925 164.079 539 169.004 539 175.079C539 181.154 543.925 186.079 550 186.079Z" fill="#3F3D56"/>
@@ -137,22 +140,18 @@
             </section>
     </main>
     <footer class="container-fluid pie"> 
-        <div class="container">
-            <div class="row">
-                <div class="col-md-3 fs-2 text-center p-3"><aside class="lugar">Quilmes-Buenos Aires</aside></div>
-                <div class="col-md-3 fs-2 text-end p-3">
+        <div class="row fondo"> 
+          <div class="col-md-3 fs-2 text-center p-3"><aside class="lugar">Quilmes-Buenos Aires</aside></div>
+                <div class="col-md-2 fs-2 p-1" style="left: 23%; position: relative;">
                     <a href="https://www.instagram.com/lucilagomezpasteleria/?hl=es-la" target="_blank"><i class="fab fa-instagram icon1"></i></a>
                     <a href="https://l.instagram.com/?u=https%3A%2F%2Fapi.whatsapp.com%2Fsend%3Fphone%3D541161539288&e=ATMs9mnyw1sLnNjqaUm3YpBSS4P-5PN3BG9BTin1qnbTIO50ZrHGIHC37Shcc-QZxHu0Ff6Elgex4-5CjiMKhOlwf84NuzIp&s=1" target="_blank"><i class="fab fa-whatsapp icon2"></i></a>
                 </div>
-                    <div class="col-md-2">
-                        <p class="footer-s">Seguinos</p>
-                    </div>
-                    <div class="col-md-2">
-                        <p class="footer-c">©Adriel Alegre</p>
-                    </div>
-            </div>
-        </div>
-    </footer>
+                  <div class="col-md-3 text-center p-4"><aside class="footer-c">©AdrielAlegre</aside></div>
+          </div>
+          <div class="row fondo">
+            <div class="col-md-12 text-center" style="font-family:'Barlow Condensed', sans-serif; color: #6c757d;"><p>Seguinos</p></div>
+          </div>
+      </footer>
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.3/dist/umd/popper.min.js" integrity="sha384-eMNCOe7tC1doHpGoWe/6oMVemdAVTMs2xqW4mwXrXsW0L84Iytr2wi5v2QjrP/xp" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-U1DAWAznBHeqEIlVSCgzq+c9gqGAJn5c/t99JyeKa9xxaYpSvHU5awsuZVVFIhvj" crossorigin="anonymous"></script>
 </body>
