--- a/chessecake.html
+++ b/chessecake.html
@@ -48,11 +48,11 @@
             <div class="row m-4">
                 <div class="card col-md-3" style="width: 200px; height: 200px; font-family: lato,Arial,Helvetica,sans-serif; text-transform: uppercase; font-size: 10px;background-color: #212f45;">
                     <ul class="list-group list-group-flush pt-3 m-1 categorias-np">
-                      <li class="list-group-item"><a href="nuestrosproductos.html">Cupcakes</a></li>
-                      <li class="list-group-item"><a href="tortas.html">Tortas</a></li>
-                      <li class="list-group-item"><a href="tortabrownie.html">Torta Brownie</a></li>
-                      <li class="list-group-item"><a href="">Chessecake</a></li>
-                      <li class="list-group-item"><a href="tortastematicas.html">Tortas Tematicas</a></li>
+                      <li class="list-group-item"><a href="nuestrosproductos.html"style="text-decoration: none; color: black;">Cupcakes</a></li>
+                      <li class="list-group-item"><a href="tortas.html"style="text-decoration: none; color: black;">Tortas</a></li>
+                      <li class="list-group-item"><a href="tortabrownie.html"style="text-decoration: none; color: black;">Torta Brownie</a></li>
+                      <li class="list-group-item">Chessecake</li>
+                      <li class="list-group-item"><a href="tortastematicas.html"style="text-decoration: none; color: black;">Tortas Tematicas</a></li>
                     </ul>
                 </div>
                 <div class="row col-md-3">
