--- a/tortabrownie.html
+++ b/tortabrownie.html
@@ -48,11 +48,11 @@
             <div class="row m-4">
                 <div class="card col-md-3" style="width: 200px; height: 200px; font-family: lato,Arial,Helvetica,sans-serif; text-transform: uppercase; font-size: 10px;background-color: #212f45;">
                     <ul class="list-group list-group-flush pt-3 m-1 categorias-np">
-                      <li class="list-group-item"><a href="nuestrosproductos.html">Cupcakes</a></li>
-                      <li class="list-group-item"><a href="tortas.html">Tortas</a></li>
-                      <li class="list-group-item"><a href="">Torta Brownie</a></li>
-                      <li class="list-group-item"><a href="chessecake.html">Chessecake</a></li>
-                      <li class="list-group-item"><a href="tortastematicas.html">Tortas Tematicas</a></li>
+                      <li class="list-group-item"><a href="nuestrosproductos.html"style="text-decoration: none; color: black;">Cupcakes</a></li>
+                      <li class="list-group-item">Tortas</li>
+                      <li class="list-group-item"><a href="#"style="text-decoration: none; color: black;">Torta Brownie</a></li>
+                      <li class="list-group-item"><a href="chessecake.html"style="text-decoration: none; color: black;">Chessecake</a></li>
+                      <li class="list-group-item"><a href="tortastematicas.html"style="text-decoration: none; color: black;">Tortas Tematicas</a></li>
                     </ul>
                 </div>
                 <div class="row col-md-3">
@@ -65,8 +65,8 @@
                     <div style="left: 70%; position: absolute;"><img src="imagenes/cupcakes/cup5_4200.jpg" class="img-responsive"; width="325px"></div>
                 </div>-->
             </div>
-            <div class="row col-md-3 pt-3">
-                <div style="left: 30%; position: absolute;"><img src="imagenes/tortabrownie/tb3_4204.jpg" class="img-responsive"; width="325px"></div>
+            <div class="row pt-3">
+                <div class="col-md-3"style="left: 30%; position: absolute;"><img src="imagenes/tortabrownie/tb3_4204.jpg" class="img-responsive"; width="325px"></div>
                 <div class="col-md-3"style="left: 50%; position: absolute;"><img src="imagenes/tortabrownie/tb4_4205.jpg" class="img-responsive"; width="325px"></div>
                 <!--<div class="col-md-3"style="left: 70%; position: absolute;"><img src="imagenes/cupcakes/cup3_4197.jpg" class="img-responsive"; width="325px"></div>-->
             </div>
