--- a/quienessomos.html
+++ b/quienessomos.html
@@ -14,7 +14,7 @@
 <body>
     <header class="container-fluid">
         <div class="row fondo">
-          <div class="col-md-4">
+          <div class="col-md-4 pt-3 text-start">
             <p class="texto">Lucila Gomez Pasteleria</p>
           </div>
           <div class="col-md-4">
@@ -30,23 +30,19 @@
               </li>
           </ul>
           </div>
-          <div class="col-md-4">
-            <a href="https://l.instagram.com/?u=https%3A%2F%2Fapi.whatsapp.com%2Fsend%3Fphone%3D541161539288&e=ATMs9mnyw1sLnNjqaUm3YpBSS4P-5PN3BG9BTin1qnbTIO50ZrHGIHC37Shcc-QZxHu0Ff6Elgex4-5CjiMKhOlwf84NuzIp&s=1" target="_blank" class="texto2">Para consultas y reservas</a>
+          <div class="col-md-4 pt-3 text-end">
+            <a href="https://l.instagram.com/?u=https%3A%2F%2Fapi.whatsapp.com%2Fsend%3Fphone%3D541161539288&e=ATMs9mnyw1sLnNjqaUm3YpBSS4P-5PN3BG9BTin1qnbTIO50ZrHGIHC37Shcc-QZxHu0Ff6Elgex4-5CjiMKhOlwf84NuzIp&s=1" target="_blank" class="texto">Para consultas y reservas</a>
           </div>
       </div>
       </header>
     <main>
         <section class="row">
-            <article class="col-md-5 text-center pt-4"><img src="imagenes/keepcalm.jpg" class = "img-responsive" width = "55%"></article>
-            <p class="col-md-4 text-start pt-4 fst-italic fs-5 fuente">Somos un emprendimiento dedicado exclusivamente a la pastelria ubicado en la zona sur del Gran Buenos Aires. 
+            <article class="col-md-4 text-center pt-4"><img src="imagenes/keepcalm.jpg" class = "img-responsive imagenKeep" width = "55%"></article>
+            <p class="col-md-4 text-center pt-4 textoUbicacion">Somos un emprendimiento dedicado exclusivamente a la pastelria ubicado en la zona sur del Gran Buenos Aires. 
                 Lucila(como indica nuestro nombre) es la que hace posible cada producto,la misma es quien realiza la elaboracion y presentacion final.
-                Cabe aclarar que realizamos un contacto previo con nuestros clientes para saber que es lo que desean ,asi poder trabajar para satisfacer al mismo y que tengan una buena experiencia</p> 
-            <div class="row col-md-12 justify-content-center">
-                <a href="index.html" button type="button" class="btn btn-primary btn-sm botonQs text-center" onclick="this.blur();">Volver al home</a>
-            </div>
-        </section>
-        <section>
-                <svg class="illustracion" width="810" height="678" viewBox="0 0 810 678" fill="none" xmlns="http://www.w3.org/2000/svg">
+                Cabe aclarar que realizamos un contacto previo con nuestros clientes para saber que es lo que desean ,asi poder trabajar para satisfacer al mismo y que tengan una buena experiencia</p>
+                <div class="col-md-4 text-center">
+                  <svg class="illustracion" width="810" height="678" viewBox="0 0 810 678" fill="none" xmlns="http://www.w3.org/2000/svg">
                     <g id="undraw_cookie_love_ulvn 1" filter="url(#filter0_d)">
                     <path id="Vector" d="M550 186.079C556.075 186.079 561 181.154 561 175.079C561 169.004 556.075 164.079 550 164.079C543.925 164.079 539 169.004 539 175.079C539 181.154 543.925 186.079 550 186.079Z" fill="#3F3D56"/>
                     <path id="Vector_2" d="M550 273.079C556.075 273.079 561 268.154 561 262.079C561 256.004 556.075 251.079 550 251.079C543.925 251.079 539 256.004 539 262.079C539 268.154 543.925 273.079 550 273.079Z" fill="#3F3D56"/>
@@ -137,19 +133,23 @@
                     </filter>
                     </defs>
                     </svg>
-            </section>
+                </div> 
+        </section>
+            <div class="row col-md-12 justify-content-center">
+              <a href="index.html" button type="button" class="btn btn-primary btn-sm botonQs text-center" onclick="this.blur();">Volver al home</a>
+          </div>
     </main>
-    <footer class="container-fluid pie"> 
+    <footer class="container-fluid"> 
         <div class="row fondo"> 
-          <div class="col-md-3 fs-2 text-center p-3"><aside class="lugar">Quilmes-Buenos Aires</aside></div>
-                <div class="col-md-2 fs-2 p-1" style="left: 23%; position: relative;">
+          <div class="col-md-4 fs-2 text-start p-3"><p class="lugar">Quilmes-Buenos Aires</p></div>
+                <div class="col-md-4 fs-2 p-3 text-center">
                     <a href="https://www.instagram.com/lucilagomezpasteleria/?hl=es-la" target="_blank"><i class="fab fa-instagram icon1"></i></a>
                     <a href="https://l.instagram.com/?u=https%3A%2F%2Fapi.whatsapp.com%2Fsend%3Fphone%3D541161539288&e=ATMs9mnyw1sLnNjqaUm3YpBSS4P-5PN3BG9BTin1qnbTIO50ZrHGIHC37Shcc-QZxHu0Ff6Elgex4-5CjiMKhOlwf84NuzIp&s=1" target="_blank"><i class="fab fa-whatsapp icon2"></i></a>
                 </div>
-                  <div class="col-md-3 text-center p-4"><aside class="footer-c">©AdrielAlegre</aside></div>
+                <div class="col-md-4 text-end p-3"><p class="footer-c">©AdrielAlegre</p></div>
           </div>
           <div class="row fondo">
-            <div class="col-md-12 text-center" style="font-family:'Barlow Condensed', sans-serif; color: #6c757d;"><p>Seguinos</p></div>
+            <div class="col-md-12 text-center"><p class="footer-Seguinos">Seguinos</p></div>
           </div>
       </footer>
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.3/dist/umd/popper.min.js" integrity="sha384-eMNCOe7tC1doHpGoWe/6oMVemdAVTMs2xqW4mwXrXsW0L84Iytr2wi5v2QjrP/xp" crossorigin="anonymous"></script>
