Actualizacion de responsive

--- a/contacto.html
+++ b/contacto.html
@@ -79,6 +79,15 @@
         <button type="button" class="btn btn-primary col-md-1 botonDePedido" data-bs-toggle="modal" data-bs-target="#exampleModal">
           Cancelar Pedido
         </button>
+        <div class="row">
+          <div class="col-md-12 text-center pt-5">
+            <p class="textoIndx">Recorda que podes realizar tus pedidos a traves de whatsapp y disfrutar el pedido en tu casa</p>
+          </div>
+        </div>
+        <div class="row">
+          <div class="col-md-12 text-center pt-5">
+              <img src="imagenes/IMG_4003 orginal.png" class="img-responsive" width="8%">
+          </div>
         <div class="row col-md-12 justify-content-center pt-5">
           <a href="index.html" button type="button" class="btn btn-primary btn-sm text-center botonQs"onclick="this.blur();">Volver al home</a>
         </div>
