--- a/quienessomos.html
+++ b/quienessomos.html
@@ -135,6 +135,11 @@
                     </svg>
                 </div> 
         </section>
+        <div class="row">
+          <div class="col-md-12 text-center pt-5">
+            <p class="textoIndx">Si te gusta algúnos de nuestros estilos o buscas algo un poco más personalizado escribinos a traves de nuestros medios de contacto</p>
+          </div>
+        </div>
             <div class="row col-md-12 justify-content-center">
               <a href="index.html" button type="button" class="btn btn-primary btn-sm botonQs text-center" onclick="this.blur();">Volver al home</a>
           </div>
