--- a/nuestrosproductos.html
+++ b/nuestrosproductos.html
@@ -14,7 +14,7 @@
 <body>
     <header class="container-fluid">
         <div class="row fondo">
-          <div class="col-md-4">
+            <div class="col-md-4 pt-3 text-start">
             <p class="texto">Lucila Gomez Pasteleria</p>
           </div>
           <div class="col-md-4">
@@ -30,99 +30,66 @@
               </li>
           </ul>
           </div>
-          <div class="col-md-4">
-            <a href="https://l.instagram.com/?u=https%3A%2F%2Fapi.whatsapp.com%2Fsend%3Fphone%3D541161539288&e=ATMs9mnyw1sLnNjqaUm3YpBSS4P-5PN3BG9BTin1qnbTIO50ZrHGIHC37Shcc-QZxHu0Ff6Elgex4-5CjiMKhOlwf84NuzIp&s=1" target="_blank" class="texto2">Para consultas y reservas</a>
+          <div class="col-md-4 pt-3 text-end">  
+            <a href="https://l.instagram.com/?u=https%3A%2F%2Fapi.whatsapp.com%2Fsend%3Fphone%3D541161539288&e=ATMs9mnyw1sLnNjqaUm3YpBSS4P-5PN3BG9BTin1qnbTIO50ZrHGIHC37Shcc-QZxHu0Ff6Elgex4-5CjiMKhOlwf84NuzIp&s=1" target="_blank" class="texto">Para consultas y reservas</a>
           </div>
       </div>
       </header>   
-    <main class="container-fluid">
-        <div class="row m-5">
+    <main class="container-fluid"> 
+        <div class="row pt-3">
             <h2>Categorías</h2>
         </div>
-        <div class="row">
-            <div class="col-md-12 text-center">
-                <h3>Cupcakes</h3>
-            </div>
+        <div class="row col-md-12">
+            <ul class="nav justify-content-center">
+                <li class="nav-item">
+                  <a class="nav-link active textoCategorias" aria-current="page" href="#">Cupcakes</a>
+                </li>
+                <li class="nav-item">
+                  <a class="nav-link textoCategorias" href="tortas.html">Tortas</a>
+                </li>
+                <li class="nav-item">
+                  <a class="nav-link textoCategorias" href="tortabrownie.html">Torta Brownie</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link textoCategorias" href="chessecake.html">Chessecake</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link textoCategorias" href="tortastematicas.html">Tortas Tematicas</a>
+                </li>
+              </ul>
         </div>
-        <section class="container-fluid">
+        <div class="row pt-3 text-center">
+            <h2>Cupcakes</h2>
+        </div>
+        <div class="row pt-3">
+            <div class="col-md-12 text-center"><img src="imagenes/cupcakes/cup6_4201.jpg" class="img-responsive"; width="325px"><img src="imagenes/cupcakes/cup4_4199.jpg" class="img-responsive"; width="325px"></div>
+        </div>
             <div class="row">
-                <div class="row m-4">
-                    <div class="card col-md-3" style="width: 200px; height: 200px; font-family: lato,Arial,Helvetica,sans-serif; text-transform: uppercase; font-size: 10px;">
-                        <ul class="list-group list-group-flush pt-3 m-1 categorias-np">
-                          <li class="list-group-item">Cupcakes</li>
-                          <li class="list-group-item"><a href="tortas.html" style="text-decoration: none; color: black;">Tortas</a></li>
-                          <li class="list-group-item"><a href="tortabrownie.html" style="text-decoration: none; color: black;">Torta Brownie</a></li>
-                          <li class="list-group-item"><a href="chessecake.html" style="text-decoration: none; color: black;">Chessecake</a></li>
-                          <li class="list-group-item"><a href="tortastematicas.html" style="text-decoration: none; color: black;">Tortas Tematicas</a></li>
-                        </ul>
-                    </div>
-                        <div class="row col-md-3">
-                            <div style="left: 30%; position: absolute;"><img src="imagenes/cupcakes/cup1_4195.jpg" class="img-responsive"; width="325px"></div>
-                        </div>
-                        <div class="col-md-3">
-                            <div style="left: 50%; position: absolute;"><img src="imagenes/cupcakes/cup2_4196.jpg" class="img-responsive"; width="325px"></div>
-                        </div>
-                    </div>
+                <div class="col-md-12 text-center"><img src="imagenes/cupcakes/cup1_4195.jpg" class="img-responsive"; width="325px"><img src="imagenes/cupcakes/cup2_4196.jpg" class="img-responsive"; width="325px"></div>
             </div>
-            <div class="row pt-3">
-                <div class="col-md-3"style="left: 30%; position: absolute;"><img src="imagenes/cupcakes/cup6_4201.jpg" class="img-responsive"; width="325px"></div>
-                <div class="col-md-3"style="left: 50%; position: absolute;"><img src="imagenes/cupcakes/cup4_4199.jpg" class="img-responsive"; width="325px"></div>
+        <div class="container-fluid">
+            <div class="row col-md-12 text-center pt-5">
+              <p class="textoIndx">Recorda que podes abonar tus productos con estos medios de pago</p>
             </div>
-        </section>
-        
-                <!--<div class="row pt-5">
-                    <div class="col-md-4 text-center efecto"><img src="imagenes/alfajores.jpg" class = "img-responsive" width = "75%"></div>
-                    <div class="col-md-4 text-center efecto"><img src="imagenes/chessecake.jpg" class = "img-responsive" width = "75%"></div>
-                    <div class="col-md-4 text-center efecto"><img src="imagenes/chocotorta.jpg" class = "img-responsive" width = "75%"></div>
-                </div>
-                <div class="row pt-4 texto">
-                    <div class="col-md-4 text-center fs-5"><p class="efectoTexto">Alfajores</p></div>
-                    <div class="col-md-4 text-center fs-5"><p class="efectoTexto">Chessecake</p></div>
-                    <div class="col-md-4 text-center fs-5"><p class="efectoTexto">Chocotorta</p></div>
-                </div>
-                <div class="row pt-4">
-                    <div class="col-md-4 text-center efecto"><img src="imagenes/mix.jpg" class = "img-responsive" width = "75%"></div>
-                    <div class="col-md-4 text-center efecto"><img src="imagenes/tortabrownie.jpg" class = "img-responsive" width = "75%"></div>
-                    <div class="col-md-4 text-center efecto"><img src="imagenes/tortadeletras.jpg" class = "img-responsive" width = "75%"></div>
-                </div>
-                <div class="row pt-4 texto">
-                    <div class="col-md-4 text-center fs-5"><p class="efectoTexto">Mix</p></div>
-                    <div class="col-md-4 text-center fs-5"><p class="efectoTexto">Torta brownie</p></div>
-                    <div class="col-md-4 text-center fs-5"><p class="efectoTexto">Torta de letras</p></div>
-                </div>
-                <div class="row pt-4">
-                    <div class="col-md-4 text-center efecto"><img src="imagenes/tortasdenumeros.jpg" class = "img-responsive" width = "75%"></div>
-                    <div class="col-md-4 text-center efecto"><img src="imagenes/tortastematicas.jpg" class = "img-responsive" width = "75%"></div>
-                    <div class="col-md-4 text-center efecto"><img src="imagenes/cupcakes.jpg" class = "img-responsive" width = "75%"></div>
-                </div>
-                <div class="row pt-4 texto">
-                    <div class="col-md-4 text-center fs-5"><p class="efectoTexto">Torta de números</p></div>
-                    <div class="col-md-4 text-center fs-5"><p class="efectoTexto">Tortas tematicas</p></div>
-                    <div class="col-md-4 text-center fs-5"><p class="efectoTexto">Cupcakes</p></div>
-                </div>
-                <div class="row pt-4">
-                    <div class="col-md-4 text-center efecto"><img src="imagenes/tortas.jpg" class = "img-responsive" width = "75%"></div>
-                </div>
-                <div class="row pt-4 texto">
-                    <div class="col-md-4 text-center fs-5"><p class="efectoTexto">Tortas</p></div>
-                </div>
-            </section>
-            <div class="row col-md-12 justify-content-center">
-                <a href="index.html" button type="button" class="btn btn-primary btn-sm botonesBackHome text-center" onclick="this.blur();">Volver al home</a></div>   
-            </div>-->
+          </div>
+          <div class="container-fluid">
+            <div class="row">
+              <div class="col-md-12 text-center"><img src="imagenes/logomercadopago.png" class="img-responsive logoMercadoPago"> <img src="imagenes/logovisa (1).png" class="img-responsive logoTarjeta"></div>
+            </div>
+          </div>
     </main>
-    <footer class="container-fluid pie"> 
+    <footer class="container-fluid"> 
         <div class="row fondo"> 
-            <div class="col-md-3 fs-2 text-center p-3"><aside class="lugar">Quilmes-Buenos Aires</aside></div>
-                <div class="col-md-2 fs-2 p-1" style="left: 23%; position: relative;">
+            <div class="col-md-4 fs-2 text-start p-3"><p class="lugar">Quilmes-Buenos Aires</p></div>
+                <div class="col-md-4 fs-2 p-3 text-center">
                     <a href="https://www.instagram.com/lucilagomezpasteleria/?hl=es-la" target="_blank"><i class="fab fa-instagram icon1"></i></a>
                     <a href="https://l.instagram.com/?u=https%3A%2F%2Fapi.whatsapp.com%2Fsend%3Fphone%3D541161539288&e=ATMs9mnyw1sLnNjqaUm3YpBSS4P-5PN3BG9BTin1qnbTIO50ZrHGIHC37Shcc-QZxHu0Ff6Elgex4-5CjiMKhOlwf84NuzIp&s=1" target="_blank"><i class="fab fa-whatsapp icon2"></i></a>
                 </div>
-                <div class="col-md-3 text-center p-4"><aside class="footer-c">©AdrielAlegre</aside></div>
+                <div class="col-md-4 text-end p-3"><p class="footer-c">©AdrielAlegre</p></div>
             </div>
             <div class="row fondo">
-            <div class="col-md-12 text-center" style="font-family:'Barlow Condensed', sans-serif; color: #6c757d;"><p>Seguinos</p></div>
-        </div>
+                <div class="col-md-12 text-center"><p class="footer-Seguinos">Seguinos</p></div>
+            </div>
     </footer>
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.3/dist/umd/popper.min.js" integrity="sha384-eMNCOe7tC1doHpGoWe/6oMVemdAVTMs2xqW4mwXrXsW0L84Iytr2wi5v2QjrP/xp" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-U1DAWAznBHeqEIlVSCgzq+c9gqGAJn5c/t99JyeKa9xxaYpSvHU5awsuZVVFIhvj" crossorigin="anonymous"></script>
