--- a/index.html
+++ b/index.html
@@ -20,29 +20,40 @@
         <div class="col-md-4 pt-3 text-start">
           <p class="texto">Lucila Gomez Pasteleria</p>
         </div>
-        <div class="col-md-4">
-            <ul class="nav text-center p-3 mb-2 flex-column flex-md-row">
-              <li class="nav-item">
+        <div class="col-md-4 text-center"> 
+              <ul class="nav text-center pt-4 mb-2 flex-column flex-md-row">
+                <li class="nav-item">
                   <a class="nav-link header_menu" aria-current="page" href="quienessomos.html">Quienes Somos</a>
-              </li>
-              <li class="nav-item">
+                </li>
+                <li class="nav-item">
                   <a class="nav-link header_menu" href="nuestrosproductos.html">Nuestros Productos</a>
-              </li>
-              <li class="nav-item">
+                </li>
+                <li class="nav-item">
                   <a class="nav-link header_menu" href="contacto.html">Contacto</a>
-              </li>
-            </ul>
+                </li>
+              </ul>
+              <div class="dropdown">
+                <button class="btn btn-secondary dropdown-toggle" type="button" id="dropdownMenuButton1" data-bs-toggle="dropdown" aria-expanded="false">
+                  Inicio
+                </button>
+                <ul class="dropdown-menu" aria-labelledby="dropdownMenuButton1">
+                  <li><a class="dropdown-item" href="#">Nuestros Productos</a></li>
+                  <li><a class="dropdown-item" href="#">Contacto</a></li>
+                  <li><a class="dropdown-item" href="#">Nuestros Productos</a></li>
+                </ul>
+              </div>
         </div>
-        <div class="col-md-4 pt-3 text-end">
-          <a href="https://l.instagram.com/?u=https%3A%2F%2Fapi.whatsapp.com%2Fsend%3Fphone%3D541161539288&e=ATMs9mnyw1sLnNjqaUm3YpBSS4P-5PN3BG9BTin1qnbTIO50ZrHGIHC37Shcc-QZxHu0Ff6Elgex4-5CjiMKhOlwf84NuzIp&s=1" target="_blank" class="texto">Para consultas y reservas</a>
-        </div>
-    </div>
+          <div class="col-md-4 pt-3 text-end">
+            <a href="https://l.instagram.com/?u=https%3A%2F%2Fapi.whatsapp.com%2Fsend%3Fphone%3D541161539288&e=ATMs9mnyw1sLnNjqaUm3YpBSS4P-5PN3BG9BTin1qnbTIO50ZrHGIHC37Shcc-QZxHu0Ff6Elgex4-5CjiMKhOlwf84NuzIp&s=1" target="_blank" class="texto">Para consultas y reservas</a>
+          </div>
+      </div>
     </header>
       <main class="container-fluid">
         <div class="row">
-          <div class="col-md-12 text-center pt-5">
-              <img src="imagenes/IMG_4003 orginal.png" class="img-responsive" width="25%">
+          <div class="col-md-8 ofset-md-2 text-center pt-5">
+              <img src="imagenes/IMG_4003 orginal.png" class="img-fluid" width="">
           </div>
+        </div>
           <div class="row">
             <div class="col-md-12 text-center pt-5">
               <p class="textoIndx">Realiza tus pedidos a traves de whatsapp y disfruta el pedido en tu casa</p>
@@ -50,22 +61,22 @@
           </div>
           <div class="container-fluid">
             <div class="row pt-5 pb-2 text-center">
-              <div class="col-md-2 imagenes-index"><img src="imagenes/IMG_4124-2.jpg" class="img-responsive" width="70%">
+              <div class="col-md-2 imagenes-index"><img src="imagenes/IMG_4124-2.jpg" class="img-fluid" width="">
                 <h4 class="textoIndx">Tortas</h4>
               </div>
-              <div class="col-md-2 imagenes-index"><img src="imagenes/IMG_4126-2.jpg" class="img-responsive" width="70%">
+              <div class="col-md-2 imagenes-index"><img src="imagenes/IMG_4126-2.jpg" class="img-fluid" width="">
                 <h4 class="textoIndx">Cumpleaños</h4>
               </div>
-              <div class="col-md-2 imagenes-index"><img src="imagenes/IMG_4128-2.jpg" class="img-responsive" width="70%">
+              <div class="col-md-2 imagenes-index"><img src="imagenes/IMG_4128-2.jpg" class="img-fluid" width="">
                 <h4 class="textoIndx">Paletas</h4>
               </div>
-              <div class="col-md-2 imagenes-index"><img src="imagenes/IMG_4129-2.jpg" class="img-responsive" width="70%">
+              <div class="col-md-2 imagenes-index"><img src="imagenes/IMG_4129-2.jpg" class="img-fluid" width="">
                 <h4 class="textoIndx">Macarons</h4>
               </div>
-              <div class="col-md-2 imagenes-index"><img src="imagenes/IMG_4130-2.jpg" class="img-responsive" width="70%">
+              <div class="col-md-2 imagenes-index"><img src="imagenes/IMG_4130-2.jpg" class="img-fluid" width="">
                 <h4 class="textoIndx">Alfajores</h4>
               </div>
-              <div class="col-md-2 imagenes-index"><img src="imagenes/IMG_4131-2.jpg" class="img-responsive" width="70%">
+              <div class="col-md-2 imagenes-index"><img src="imagenes/IMG_4131-2.jpg" class="img-fluid" width="">
                 <h4 class="textoIndx">Brownie</h4>
               </div>
             </div>
@@ -79,8 +90,7 @@
               <div class="row">
                 <div class="col-md-12 text-center"><img src="imagenes/logomercadopago.png" class="img-responsive logoMercadoPago"> <img src="imagenes/logovisa (1).png" class="img-responsive logoTarjeta"></div>
               </div>
-            </div>
-        </div>
+            </div>  
         </main>
         <footer class="container-fluid"> 
           <div class="row fondo"> 
