--- a/tortabrownie.html
+++ b/tortabrownie.html
@@ -14,27 +14,38 @@
 <body class="fondo3">
     <header class="container-fluid">
         <div class="row fondo">
-            <div class="col-md-4 pt-3 text-start">
-                <p class="texto">Lucila Gomez Pasteleria</p>
-            </div>
-            <div class="col-md-4">
-                <ul class="nav justify-content-center p-3 mb-2 flex-column flex-md-row">
-                    <li class="nav-item">
-                        <a class="nav-link header_menu" aria-current="page" href="quienessomos.html">Quienes Somos</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link header_menu" href="nuestrosproductos.html">Nuestros Productos</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link header_menu" href="contacto.html">Contacto</a>
-                    </li>
+          <div class="col-md-4 pt-3 text-start">
+            <p class="texto">Lucila Gomez Pasteleria</p>
+          </div>
+          <div class="col-md-4"> 
+                <ul class="nav justify-content-center pt-3 mb-2 flex-column flex-md-row">
+                  <li class="nav-item">
+                    <a class="nav-link header_menu" aria-current="page" href="quienessomos.html">Quienes Somos</a>
+                  </li>
+                  <li class="nav-item">
+                    <a class="nav-link header_menu" href="nuestrosproductos.html">Nuestros Productos</a>
+                  </li>
+                  <li class="nav-item">
+                    <a class="nav-link header_menu" href="contacto.html">Contacto</a>
+                  </li>
                 </ul>
-            </div>
-            <div class="col-md-4 pt-3 text-end"> 
-                <a href="https://l.instagram.com/?u=https%3A%2F%2Fapi.whatsapp.com%2Fsend%3Fphone%3D541161539288&e=ATMs9mnyw1sLnNjqaUm3YpBSS4P-5PN3BG9BTin1qnbTIO50ZrHGIHC37Shcc-QZxHu0Ff6Elgex4-5CjiMKhOlwf84NuzIp&s=1" target="_blank" class="texto">Para consultas y reservas</a>
+                <div class="dropdown">
+                  <button class="botonDeInicio" type="button"  data-bs-toggle="dropdown" aria-expanded="false">
+                    Inicio
+                  </button>
+                  <ul class="dropdown-menu botonDeInicio" aria-labelledby="dropdownMenuButton1">
+                    <li><a class="opciones" href="nuestrosproductos.html">Nuestros Productos</a></li>
+                    <li><a class="opciones" href="contacto.html">Contacto</a></li>
+                    <li><a class="opciones" href="quienessomos.html">Quienes Somos</a></li>
+                    <li><a class="opciones" href="https://l.instagram.com/?u=https%3A%2F%2Fapi.whatsapp.com%2Fsend%3Fphone%3D541161539288&e=ATMs9mnyw1sLnNjqaUm3YpBSS4P-5PN3BG9BTin1qnbTIO50ZrHGIHC37Shcc-QZxHu0Ff6Elgex4-5CjiMKhOlwf84NuzIp&s=1">Para consultas y reservas</a></li>
+                  </ul>
+                </div>
+          </div>
+            <div class="col-md-4 pt-3 text-end">
+              <a href="https://l.instagram.com/?u=https%3A%2F%2Fapi.whatsapp.com%2Fsend%3Fphone%3D541161539288&e=ATMs9mnyw1sLnNjqaUm3YpBSS4P-5PN3BG9BTin1qnbTIO50ZrHGIHC37Shcc-QZxHu0Ff6Elgex4-5CjiMKhOlwf84NuzIp&s=1" target="_blank" class="textoCyR">Para consultas y reservas</a>
             </div>
         </div>
-    </header>
+      </header>
     <main class="container-fluid">
         <div class="row pt-3">
             <h2>Categorías</h2>
@@ -42,7 +53,7 @@
         <div class="row col-md-12"> 
             <ul class="nav justify-content-center">
                 <li class="nav-item">
-                    <a class="nav-link active textoCategorias" aria-current="page" href="#">Cupcakes</a>
+                    <a class="nav-link active textoCategorias" aria-current="page" href="nuestrosproductos.html">Cupcakes</a>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link textoCategorias" href="tortas.html">Tortas</a>
