--- a/quienessomos.html
+++ b/quienessomos.html
@@ -12,30 +12,41 @@
     <title>Quienes Somos</title>
 </head>
 <body>
-    <header class="container-fluid">
-        <div class="row fondo">
-          <div class="col-md-4 pt-3 text-start">
-            <p class="texto">Lucila Gomez Pasteleria</p>
-          </div>
-          <div class="col-md-4">
-            <ul class="nav justify-content-center p-3 mb-2 flex-column flex-md-row">
-              <li class="nav-item">
-                  <a class="nav-link header_menu" aria-current="page" href="quienessomos.html">Quienes Somos</a>
-              </li>
-              <li class="nav-item">
-                  <a class="nav-link header_menu" href="nuestrosproductos.html">Nuestros Productos</a>
-              </li>
-              <li class="nav-item">
-                  <a class="nav-link header_menu" href="contacto.html">Contacto</a>
-              </li>
-          </ul>
-          </div>
-          <div class="col-md-4 pt-3 text-end">
-            <a href="https://l.instagram.com/?u=https%3A%2F%2Fapi.whatsapp.com%2Fsend%3Fphone%3D541161539288&e=ATMs9mnyw1sLnNjqaUm3YpBSS4P-5PN3BG9BTin1qnbTIO50ZrHGIHC37Shcc-QZxHu0Ff6Elgex4-5CjiMKhOlwf84NuzIp&s=1" target="_blank" class="texto">Para consultas y reservas</a>
-          </div>
+  <header class="container-fluid">
+    <div class="row fondo">
+      <div class="col-md-4 pt-3 text-start">
+        <p class="texto">Lucila Gomez Pasteleria</p>
       </div>
-      </header>
-    <main>
+      <div class="col-md-4"> 
+            <ul class="nav justify-content-center pt-3 mb-2 flex-column flex-md-row">
+              <li class="nav-item">
+                <a class="nav-link header_menu" aria-current="page" href="quienessomos.html">Quienes Somos</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link header_menu" href="nuestrosproductos.html">Nuestros Productos</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link header_menu" href="contacto.html">Contacto</a>
+              </li>
+            </ul>
+            <div class="dropdown">
+              <button class="botonDeInicio" type="button"  data-bs-toggle="dropdown" aria-expanded="false">
+                Inicio
+              </button>
+              <ul class="dropdown-menu botonDeInicio" aria-labelledby="dropdownMenuButton1">
+                <li><a class="opciones" href="nuestrosproductos.html">Nuestros Productos</a></li>
+                <li><a class="opciones" href="contacto.html">Contacto</a></li>
+                <li><a class="opciones" href="quienessomos.html">Quienes Somos</a></li>
+                <li><a class="opciones" href="https://l.instagram.com/?u=https%3A%2F%2Fapi.whatsapp.com%2Fsend%3Fphone%3D541161539288&e=ATMs9mnyw1sLnNjqaUm3YpBSS4P-5PN3BG9BTin1qnbTIO50ZrHGIHC37Shcc-QZxHu0Ff6Elgex4-5CjiMKhOlwf84NuzIp&s=1">Para consultas y reservas</a></li>
+              </ul>
+            </div>
+      </div>
+        <div class="col-md-4 pt-3 text-end">
+          <a href="https://l.instagram.com/?u=https%3A%2F%2Fapi.whatsapp.com%2Fsend%3Fphone%3D541161539288&e=ATMs9mnyw1sLnNjqaUm3YpBSS4P-5PN3BG9BTin1qnbTIO50ZrHGIHC37Shcc-QZxHu0Ff6Elgex4-5CjiMKhOlwf84NuzIp&s=1" target="_blank" class="textoCyR">Para consultas y reservas</a>
+        </div>
+    </div>
+  </header>
+      <main class="container-fluid">
         <section class="row">
             <article class="col-md-4 text-center pt-4"><img src="imagenes/keepcalm.jpg" class = "img-responsive imagenKeep" width = "55%"></article>
             <p class="col-md-4 text-center pt-4 textoUbicacion">Somos un emprendimiento dedicado exclusivamente a la pastelria ubicado en la zona sur del Gran Buenos Aires. 
@@ -140,10 +151,7 @@
             <p class="textoIndx">Si te gusta algúnos de nuestros estilos o buscas algo un poco más personalizado escribinos a traves de nuestros medios de contacto</p>
           </div>
         </div>
-            <div class="row col-md-12 justify-content-center">
-              <a href="index.html" button type="button" class="btn btn-primary btn-sm botonQs text-center" onclick="this.blur();">Volver al home</a>
-          </div>
-    </main>
+      </main>
     <footer class="container-fluid"> 
         <div class="row fondo"> 
           <div class="col-md-4 fs-2 text-start p-3"><p class="lugar">Quilmes-Buenos Aires</p></div>
