actualizaciones de responsive 14-9

--- a/tortabrownie.html
+++ b/tortabrownie.html
@@ -79,7 +79,7 @@
                 <div class="col-md-12 text-center"><img src="imagenes/tortabrownie/tb3_4204.jpg" class="img-responsive"; width="325px"><img src="imagenes/tortabrownie/tb4_4205.jpg" class="img-responsive"; width="325px"></div>
             </div>
             <div class="container-fluid">
-                <div class="row col-md-12 text-center pt-5">
+                <div class="row col-md-12 text-center pt-5 text-white">
                     <p class="textoIndx">Recorda que podes abonar tus productos con estos medios de pago</p>
                 </div>
         </div>
