--- a/tortastematicas.html
+++ b/tortastematicas.html
@@ -69,7 +69,7 @@
                 </li>
             </ul>
         </div>
-        <div class="row pt-3 text-center text-dark">
+        <div class="row pt-3 text-center text-white">
             <h2>Tortas Tematicas</h2>
         </div>
                 <div class="row pt-3">
