--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
                 <h4 class="textoIndx">Tortas</h4>
               </div>
               <div class="col-md-2 imagenes-index"><img src="imagenes/IMG_4126-2.jpg" class="img-fluid" width="">
-                <h4 class="textoIndx">Cumpleaños</h4>
+                <h4 class="textoIndx">Ocasiones</h4>
               </div>
               <div class="col-md-2 imagenes-index"><img src="imagenes/IMG_4128-2.jpg" class="img-fluid" width="">
                 <h4 class="textoIndx">Paletas</h4>
@@ -89,7 +89,7 @@
             </div>
             <div class="container-fluid">
               <div class="row">
-                <div class="col-md-12 text-center"><img src="imagenes/logomercadopago.png" class="img-responsive logoMercadoPago"> <img src="imagenes/logovisa (1).png" class="img-responsive logoTarjeta"></div>
+                <div class="col-md-12 text-center"><img src="imagenes/logomercadopago.png" class="img-fluid logoMercadoPago"> <img src="imagenes/logovisa (1).png" class="img-fluid logoTarjeta"></div>
               </div>
             </div>  
         </main>
