--- a/index.html
+++ b/index.html
@@ -40,12 +40,12 @@
                 <li><a class="opciones" href="nuestrosproductos.html">Nuestros Productos</a></li>
                 <li><a class="opciones" href="contacto.html">Contacto</a></li>
                 <li><a class="opciones" href="quienessomos.html">Quienes Somos</a></li>
-                <li><a class="opciones" href="https://l.instagram.com/?u=https%3A%2F%2Fapi.whatsapp.com%2Fsend%3Fphone%3D541161539288&e=ATMs9mnyw1sLnNjqaUm3YpBSS4P-5PN3BG9BTin1qnbTIO50ZrHGIHC37Shcc-QZxHu0Ff6Elgex4-5CjiMKhOlwf84NuzIp&s=1">Para consultas y reservas</a></li>
+                <li><a class="opciones" href="https://api.whatsapp.com/send?phone=+549111161539288&text=Quiero%20consultar%20sobre%20pedidos%20y%20reservas">Para consultas y reservas</a></li>
               </ul>
             </div>
       </div>
         <div class="col-md-4 pt-3 text-end">
-          <a href="https://l.instagram.com/?u=https%3A%2F%2Fapi.whatsapp.com%2Fsend%3Fphone%3D541161539288&e=ATMs9mnyw1sLnNjqaUm3YpBSS4P-5PN3BG9BTin1qnbTIO50ZrHGIHC37Shcc-QZxHu0Ff6Elgex4-5CjiMKhOlwf84NuzIp&s=1" target="_blank" class="textoCyR">Para consultas y reservas</a>
+          <a href="https://api.whatsapp.com/send?phone=+549111161539288&text=Quiero%20consultar%20sobre%20pedidos%20y%20reservas" target="_blank" class="textoCyR">Para consultas y reservas</a>
         </div>
     </div>
   </header>
@@ -62,23 +62,23 @@
           </div>
           <div class="container-fluid">
             <div class="row pt-5 pb-2 text-center">
-              <div class="col-md-2 imagenes-index"><img src="imagenes/IMG_4124-2.jpg" class="img-fluid" width="">
-                <h4 class="textoIndx">Tortas</h4>
+              <div class="col-md-2"><img src="imagenes/IMG_4124-2.jpg" class="img-fluid" width="">
+                <h4 class="">Tortas</h4>
               </div>
-              <div class="col-md-2 imagenes-index"><img src="imagenes/IMG_4126-2.jpg" class="img-fluid" width="">
-                <h4 class="textoIndx">Ocasiones</h4>
+              <div class="col-md-2"><img src="imagenes/IMG_4126-2.jpg" class="img-fluid" width="">
+                <h4 class="">Ocasiones</h4>
               </div>
-              <div class="col-md-2 imagenes-index"><img src="imagenes/IMG_4128-2.jpg" class="img-fluid" width="">
-                <h4 class="textoIndx">Paletas</h4>
+              <div class="col-md-2"><img src="imagenes/IMG_4128-2.jpg" class="img-fluid" width="">
+                <h4 class="">Paletas</h4>
               </div>
-              <div class="col-md-2 imagenes-index"><img src="imagenes/IMG_4129-2.jpg" class="img-fluid" width="">
-                <h4 class="textoIndx">Macarons</h4>
+              <div class="col-md-2"><img src="imagenes/IMG_4129-2.jpg" class="img-fluid" width="">
+                <h4 class="">Macarons</h4>
               </div>
-              <div class="col-md-2 imagenes-index"><img src="imagenes/IMG_4130-2.jpg" class="img-fluid" width="">
-                <h4 class="textoIndx">Alfajores</h4>
+              <div class="col-md-2"><img src="imagenes/IMG_4130-2.jpg" class="img-fluid" width="">
+                <h4 class="">Alfajores</h4>
               </div>
-              <div class="col-md-2 imagenes-index"><img src="imagenes/IMG_4131-2.jpg" class="img-fluid" width="">
-                <h4 class="textoIndx">Brownie</h4>
+              <div class="col-md-2"><img src="imagenes/IMG_4131-2.jpg" class="img-fluid" width="">
+                <h4 class="">Brownie</h4>
               </div>
             </div>
           </div>
