--- a/tortastematicas.html
+++ b/tortastematicas.html
@@ -44,6 +44,8 @@
             <div class="col-md-4 pt-3 text-end">
                 <a href="https://l.instagram.com/?u=https%3A%2F%2Fapi.whatsapp.com%2Fsend%3Fphone%3D541161539288&e=ATMs9mnyw1sLnNjqaUm3YpBSS4P-5PN3BG9BTin1qnbTIO50ZrHGIHC37Shcc-QZxHu0Ff6Elgex4-5CjiMKhOlwf84NuzIp&s=1" target="_blank" class="textoCyR">Para consultas y reservas</a>
             </div>
+            <div class="row col-md-12 text-center"><a href="index.html"><i class="fas fa-home icon10"></i></a>
+            </div>
         </div>
     </header>
     <main class="container-fluid">
